# grpc-discount-calculator

./: .gitignore  docker-compose.yml  pyproject.toml
discount_service/: client.py  discounter_server.py  messages_pb2.py  pyproject.toml  server.py  users_pb2_grpc.py
discount_service/app/: client.py  discounter_pb2.py  products_pb2.py  server.py  users_pb2.py  users_pb2_grpc.py
discount_service/app/use_cases/: discount.py
discount_service/discount_service/: discount_pb2.py  discount_pb2_grpc.py  discounter_client.py  discounter_server.py
discount_service/tests/: conftest.py  test_discount_service.py
discount_service/use_cases/: discount.py
products_service/: Dockerfile  client.py  products.db  pyproject.toml  server.py  tasks.py
products_service/app/: client.py  products_pb2.py  products_pb2_grpc.py  server.py
products_service/app/fixtures/: products.json
products_service/app/repositories/: __init__.py  database.py  models.py  products.py
products_service/repositories/: products.py  schemas.py
protos/: discount.proto  discounter.proto  messages.proto  products.proto  users.proto
rest_api/: Dockerfile  app.db  crud.py  discounter_pb2_grpc.py  main.py  messages_pb2.py  pyproject.toml  repositories.py  schemas.py  users_pb2.py
rest_api/app/: discounter_pb2.py  discounter_pb2_grpc.py  main.py  messages_pb2.py  products_pb2_grpc.py  repositories.py  schemas.py  users_pb2.py
rest_api/app/services/: __init__.py  discount.py  products.py  users.py
tasks/: __init__.py  grpc.py
users_service/: client.py  pyproject.toml  server.py  tasks.py
users_service/app/: client.py  server.py
users_service/app/fixtures/: users.json
users_service/app/repositories/: __init__.py  users.py
users_service/repositories/: helpers.py  models.py  schemas.py  users.py
