[tool.poetry]
name = "discount_service"
version = "0.1.0"
description = ""
authors = ["Daniel Santos <daniel.santos@tembici.com>"]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.33.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
grpcio-tools = "^1.33.1"
invoke = "^1.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
