[tool.poetry]
name = "discount_service"
version = "0.1.0"
description = ""
authors = ["Daniel Santos <daniel.santos@tembici.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
grpcio = "^1.33.1"
fastapi = "^0.61.1"
peewee = "^3.13.3"
stories = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
grpcio-tools = "^1.33.1"
invoke = "^1.4.1"
pytest-freezegun = "^0.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
