[tool.poetry]
name = "products_service"
version = "0.1.0"
description = ""
authors = ["Daniel Santos <dan.elias@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
grpcio = "^1.33.1"
SQLAlchemy = "^1.3.20"
pydantic = "^1.7.2"
loguru = "^0.5.3"
invoke = "^1.4.1"
Faker = "^4.14.2"
protobuf = "^3.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
