[tool.poetry]
name = "discount_service"
version = "0.1.0"
description = ""
authors = ["Daniel Santos <dan.elias@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
grpcio = "^1.33.1"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"
protobuf = "^3.13.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
